update jekylscss dark mode color from #DDD to #fff

--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -661,7 +661,7 @@
 			background-image: url('images/overlay.png');
 
 			&.dark {
-				color: #ddd;
+				color: #fff;
 				color: rgba(255, 255, 255, 0.75);
 
 				h2, h3, h4, h5, h6 {
