--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,10 +7,8 @@
 <div id="header">
   <div class="top">
     {%- include logo.html -%}
-    {%- include nav.html section_items=include.scrolly_nav -%}
-  </div>
-  <div class="bottom">
-    {%- include social_icons.html -%}<script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+    
+    <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
     <script>
       kofiWidgetOverlay.draw('moha7108', 
       { 'type': 'floating-chat',
@@ -19,5 +17,9 @@
         'floating-chat.donateButton.text-color': '#fff'});
     </script>
 
+    {%- include nav.html section_items=include.scrolly_nav -%}
+  </div>
+  <div class="bottom">
+    {%- include social_icons.html -%}
   </div>
 </div>
